2009-01-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c: (ruby 1.9) add OCI8.encoding and
	    OCI8.encoding= to get and set the encoding of the Oracle
	    library.
	* ext/oci8/oci8.h: (ruby 1.9) add macros OCI8StringValue
	    and OCI8SafeStringValue which convert the string encoding
	    to Oracle librarie's encoding.
	* ext/oci8/oci8.c: OCI8.new raise a SecurityError when specified
	    connect string is tainted and $SAFE >= 1.
	* ext/oci8/stmt.c: OCI8#parse raise a SecurityError when specified
	    SQL statemenet is tainted and $SAFE >= 1.
	* ext/oci8/metadata.c: OCI8#describe_* raise a SecurityError
	    when the object name to be described is tainted and $SAFE >= 1.
	* ext/oci8/lob.c: OCI8::BFILE.new, OCI8::BFILE#dir_alias= and
	    OCI8::BFILE#filename= raise a SecurityError when specified
	    dir_alias or filename is tainted and $SAFE >= 1.
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/error.c,
	  ext/oci8/object.c, ext/oci8/oci8lib.c, ext/oci8/ocinumber.c:
	    (ruby 1.9) converts encoding from/to OCI.encoding.

2009-01-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: concatenate read data at the end, instead of
	    appending them for each pieces when reading LOB data.
	* test/test_oranumber.rb: fix for ruby 1.9.

2009-01-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: delete OCI8.oracle_client_version implemented
	    in C. add OCI8.oracle_client_vernum whose value is retrieved
	    by OCIClientVersion() if Oracle 10.2 or upper.
	* ext/oci8/oci8.h: add macro rb_define_singleton_method_nodoc,
	    which prevents rdoc from gathering the specified method.
	* lib/.document, lib/oci8/.document: add lib/oci8.rb and
	    lib/oci8/oracle_version.rb to rdoc targets.
	* lib/oci8.rb.in, lib/oci8/oracle_version.rb: add
	    OCI8::OracleVersion OCI8.oracle_client_version.
	* test/config.rb: change version checking code to use
	    OCI8::OracleVersion.
	* test/test_all.rb, test/test_oracle_version.rb: add test cases